# ProjectEDFlib

./: CMakeLists.txt  README.md
exes/: CMakeLists.txt
exes/test/: CMakeLists.txt  sine_generator.c  sweep_generator.c  test_edflib.c  test_generator.c
exes/unittest/: CMakeLists.txt  Makefile  README  unittest.c
libs/: CMakeLists.txt  edflib.c
libs/cmake/: EDFlibConfig.cmake.in
libs/include/: edflib.h
